# arch-hex

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: config.rs  lib.rs
src/domain/: create_stock.rs  delete_stock.rs  get_stock.rs  mod.rs
src/domain/model/: mod.rs
src/ports/: create_stock.rs  delete_stock.rs  get_stock.rs  mod.rs
src/services/: mod.rs
src/services/db/: imm_db.rs  mod.rs
src/services/db/imm_db/: mod.rs
src/services/db/lite_db/: mod.rs  queries.rs  row.rs
